--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {    
+  "scripts": {
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
@@ -21,12 +21,13 @@
     "babel-plugin-transform-object-rest-spread": "6.23.0",
     "babel-preset-env": "^1.5.2",
     "babel-preset-react": "^6.24.1",
-    "css-loader": "0.28.4",   
+    "css-loader": "0.28.4",
     "express": "4.15.4",
-    "extract-text-webpack-plugin": "3.0.0",    
+    "extract-text-webpack-plugin": "3.0.0",
     "moment": "2.18.1",
     "node-sass": "4.5.3",
     "normalize.css": "7.0.0",
+    "numeral": "2.0.6",
     "raf": "3.3.2",
     "react": "16.0.0",
     "react-addons-shallow-compare": "15.6.0",
@@ -34,15 +35,15 @@
     "react-dom": "16.0.0",
     "react-modal": "2.2.2",
     "react-redux": "5.0.5",
-    "react-router-dom": "4.2.2",    
+    "react-router-dom": "4.2.2",
     "redux": "3.7.2",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
     "uuid": "3.1.0",
     "validator": "8.0.0",
-    "webpack": "3.1.0"    
+    "webpack": "3.1.0"
   },
-  "devDependencies": {     
+  "devDependencies": {
     "enzyme": "3.0.0",
     "enzyme-adapter-react-16": "1.0.0",
     "enzyme-to-json": "3.0.1",
