--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "expensify",
   "version": "1.0.0",
-  "description": "",
+  "description": "git init : Create a new git repo\r git status : View the changes to your project code\r git add : Add files to staging area\r git commit : Creates a new commit with files from staging area\r git log : View recent commit",
   "main": "index.js",
   "scripts": {
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
-    "test": "jest --config=jest.config.json",
+    "test": "cross-env NODE_ENV=test jest --config=jest.config.json",
     "start": "node server/server.js",
     "heroku-postbuild": "yarn run build:prod"
   },
@@ -24,9 +24,11 @@
     "css-loader": "0.28.4",
     "express": "4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
+    "firebase": "4.2.0",
     "moment": "2.18.1",
     "node-sass": "4.5.3",
     "normalize.css": "7.0.0",
+    "npm": "^6.1.0",
     "numeral": "2.0.6",
     "raf": "3.3.2",
     "react": "16.0.0",
@@ -37,6 +39,8 @@
     "react-redux": "5.0.5",
     "react-router-dom": "4.2.2",
     "redux": "3.7.2",
+    "redux-mock-store": "1.2.3",
+    "redux-thunk": "2.2.0",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
     "uuid": "3.1.0",
@@ -44,11 +48,19 @@
     "webpack": "3.1.0"
   },
   "devDependencies": {
+    "cross": "^1.0.0",
+    "cross-env": "5.0.5",
+    "dotenv": "4.0.0",
     "enzyme": "3.0.0",
     "enzyme-adapter-react-16": "1.0.0",
     "enzyme-to-json": "3.0.1",
     "jest": "20.0.4",
     "react-test-renderer": "16.0.0",
     "webpack-dev-server": "2.5.1"
-  }
+  },
+  "repository": "git+https://github.com/metal971/react-course-2-expensify-app.git",
+  "bugs": {
+    "url": "https://github.com/metal971/react-course-2-expensify-app/issues"
+  },
+  "homepage": "https://github.com/metal971/react-course-2-expensify-app#readme"
 }
