--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "expensify",
-  "version": "1.0.0",
+  "version": "v8.9.4",
   "description": "git init : Create a new git repo\r git status : View the changes to your project code\r git add : Add files to staging area\r git commit : Creates a new commit with files from staging area\r git log : View recent commit",
   "main": "index.js",
   "scripts": {
